--- a/index.html
+++ b/index.html
@@ -7,25 +7,31 @@
 
   <link rel="stylesheet" href="css/page.css">
 
+ <!-- for backwards compatibility -->
   <script src="node_modules/core-js/client/shim.min.js"></script>
   <script src="node_modules/zone.js/dist/zone.js"></script>
   <script src="node_modules/reflect-metadata/Reflect.js"></script>
   <script src="node_modules/systemjs/dist/system.src.js"></script>
-  
+
+  <!-- configures systemjs module loader -->
   <script src="systemjs.config.js"></script>
 
   <script>
     /*
     * scripts created in app folder be managed by this system.import which
     * will then catch errors
+    * calls all scripts inside of app folder
     */
         System.import('app').catch(function(err){ console.error(err); });
     </script>
 </head>
 
 <body> 
-  <!-- it will show loading til replace with something else -->
+  
+  <!-- it will show loading til replace with something else 
+    this is not a default tag either -->
   <app>Loading...</app>
+
 </body>
 
 </html>
